<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background= "#CDFEFF" >

    <TextView
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp" 
        android:text="@string/slogan"
        />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/now_number_text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/now_number_text"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="20sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageview"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/logo" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="pickNum"
        android:text="@string/btn_picknum" />
    
    <Button 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="finishBtn"
        android:text="@string/btn_finish"
        />

</LinearLayout>