<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background= "#CDFEFF">

   	 <TextView
   	    android:id="@+id/restaurant_slogan"
   	    android:gravity="center"
       	android:layout_width="fill_parent"
      	android:layout_height="wrap_content" 
       	android:textSize="24sp"
       	android:text="@string/restaurant_number_text" 
        />
   	 
   	 <TextView
       	android:id="@+id/text_show"
       	android:gravity="center"
       	android:layout_width="fill_parent"
       	android:layout_below="@+id/restaurant_slogan"
      	android:layout_height="wrap_content" 
       	android:textSize="24sp"
        />
	
   	 <Button
   	     android:id="@+id/btnOne"
   	     android:layout_width="90dp"
   	     android:layout_height="80dp"
   	     android:layout_alignBottom="@+id/btnTwo"
   	     android:layout_toLeftOf="@+id/btnTwo"
   	     android:layout_marginRight="10dp"
   	     android:text="1"
   	     android:textSize="24sp"
   	     />
   	 
   	 <Button
   	     android:id="@+id/btnTwo"
   	     android:layout_width="90dp"
   	     android:layout_height="80dp"
   	     android:layout_below="@+id/text_show"
   	     android:layout_centerHorizontal="true"
   	     android:layout_marginTop="20dp"
   	     android:text="2"
   	     android:textSize="24sp"
   	     />
   	  
   	  <Button
   	     android:id="@+id/btnThree"
   	     android:layout_width="90dp"
   	     android:layout_height="80dp"
   	     android:layout_alignBottom="@+id/btnTwo"
   	     android:layout_toRightOf="@+id/btnTwo"
   	     android:layout_marginLeft="10dp"
   	     android:text="3"
   	     android:textSize="24sp"
   	     />
   	  
   	  <Button
   	     android:id="@+id/btnFour"
   	     android:layout_width="90dp"
   	     android:layout_height="80dp"
   	     android:layout_alignBottom="@+id/btnFive"
   	     android:layout_toLeftOf="@+id/btnFive"
   	     android:layout_marginRight="10dp"
   	     android:text="4"
   	     android:textSize="24sp"
   	     />
   	 
   	 <Button
   	     android:id="@+id/btnFive"
   	     android:layout_width="90dp"
   	     android:layout_height="80dp"
   	     android:layout_below="@+id/btnTwo"
   	     android:layout_centerHorizontal="true"
   	     android:layout_marginTop="10dp"
   	     android:text="5"
   	     android:textSize="24sp"
   	     />
   	  
   	  <Button
   	     android:id="@+id/btnSix"
   	     android:layout_width="90dp"
   	     android:layout_height="80dp"
   	     android:layout_alignBottom="@+id/btnFive"
   	     android:layout_toRightOf="@+id/btnFive"
   	     android:layout_marginLeft="10dp"
   	     android:text="6"
   	     android:textSize="24sp"
   	     />
   	  
   	   <Button
   	     android:id="@+id/btnSeven"
   	     android:layout_width="90dp"
   	     android:layout_height="80dp"
   	     android:layout_alignBottom="@+id/btnEight"
   	     android:layout_toLeftOf="@+id/btnEight"
   	     android:layout_marginRight="10dp"
   	     android:text="7"
   	     android:textSize="24sp"
   	     />
   	 
   	 <Button
   	     android:id="@+id/btnEight"
   	     android:layout_width="90dp"
   	     android:layout_height="80dp"
   	     android:layout_below="@+id/btnFive"
   	     android:layout_centerHorizontal="true"
   	     android:layout_marginTop="10dp"
   	     android:text="8"
   	     android:textSize="24sp"
   	     />
   	  
   	  <Button
   	     android:id="@+id/btnNine"
   	     android:layout_width="90dp"
   	     android:layout_height="80dp"
   	     android:layout_alignBottom="@+id/btnEight"
   	     android:layout_toRightOf="@+id/btnEight"
   	     android:layout_marginLeft="10dp"
   	     android:text="9"
   	     android:textSize="24sp"
   	     />
   	  
   	 <Button
   	     android:id="@+id/btnCancel"
   	     android:layout_width="90dp"
   	     android:layout_height="80dp"
   	     android:layout_alignBottom="@+id/btnZero"
   	     android:layout_toLeftOf="@+id/btnZero"
   	     android:layout_marginRight="10dp"
   	     android:text="@string/cancel_btn"
   	     android:textSize="20sp"
   	     />
   	 
   	 <Button
   	     android:id="@+id/btnZero"
   	     android:layout_width="90dp"
   	     android:layout_height="80dp"
   	     android:layout_below="@+id/btnEight"
   	     android:layout_centerHorizontal="true"
   	     android:layout_marginTop="10dp"
   	     android:text="0"
   	     android:textSize="24sp"
   	     />
   	  
   	  <Button
   	     android:layout_width="90dp"
   	     android:layout_height="80dp"
   	     android:layout_alignBottom="@+id/btnZero"
   	     android:layout_toRightOf="@+id/btnZero"
   	     android:layout_marginLeft="10dp"
   	     android:text="@string/enter_btn"
   	     android:textSize="24sp"
   	     android:onClick="btnEnter"
   	     />

   	  <ProgressBar
   	      android:id="@+id/progressBar1"
   	      style="?android:attr/progressBarStyleHorizontal"
   	      android:layout_width="wrap_content"
   	      android:layout_height="wrap_content"
   	      android:layout_above="@+id/btnOne"
   	      android:layout_alignLeft="@+id/btnOne"
   	      android:layout_alignRight="@+id/btnThree" />
   	 
</RelativeLayout>